--- a/_sass/landing/base.scss
+++ b/_sass/landing/base.scss
@@ -48,6 +48,7 @@ body.landing {
         rgb(28, 80, 100) 81%, rgb(29, 79, 95) 100%));
     position: relative;
     z-index: 0;
+    height: 620px;
 
     // Top padding should at least the height of the navbar, proper offset
     padding-top: rem(100);
@@ -64,14 +65,16 @@ body.landing {
         opacity: 0.35;
         @include media($mobile) {
             background-size: auto 75%;
-            background-position: rem(-230) rem(70);
+            // background-position: rem(-230) rem(70);
+            background-position: center bottom;
         }
         @include media($medium-screen-up) {
             background-size: auto 90%;
-            background-position: rem(-160) rem(45);
+            // background-position: rem(-160) rem(45);
+            background-position: center bottom;
         }
         @include media($large-screen-up) {
-            background-size: auto 100%;
+            background-size: 100% 100%;
             background-position: center bottom;
         }
     }
